# Weather_Mesh_Lite

./: .gitignore  README.md
mesh_local_control/: mqtt_host.py  tcp_client.py
mesh_local_control/main/: CMakeLists.txt  block_chain.c  block_chain.h  blockchain.c  blockchain.h  command_set.h  consensus.c  consensus.h  election_response.c  election_response.h  external_comm.c  external_comm.h  idf_component.yml  local_control.c  logger.c  logger.h  main.c  mesh_networking.c  mesh_networking.h  my_includes.h  my_utility.c  my_utility.h  node_id.c  node_id.h  node_response.c  node_response.h  temperature_probe.c  temperature_probe.h  wifi_networking.c  wifi_networking.h  ws_comm.c  ws_comm.h
