idf_component_register(
    SRCS 
        "blockchain.c"
        "consensus.c"
        "election_response.c"
        "logger.c"
        "main.c"
        "mesh_networking.c"
        "my_utility.c"
        "node_id.c"
        "node_response.c"
        "temperature_probe.c"
        "wifi_networking.c"
    INCLUDE_DIRS "."
)

